// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`@npm/mobydick-core/TooltipBase/DescriptionText should renders correctly  1`] = `
<Text
  allowFontScaling={true}
  style={
    Array [
      Object {
        "color": "#FFF",
        "fontFamily": "Inter-Regular",
        "fontSize": 21,
        "lineHeight": 27,
      },
      Array [
        Object {
          "paddingBottom": 12,
          "zIndex": 1,
        },
        undefined,
      ],
    ]
  }
>
  descriptionText
</Text>
`;

exports[`@npm/mobydick-core/TooltipBase/DescriptionText should renders correctly font 1`] = `
<Text
  allowFontScaling={true}
  style={
    Array [
      Object {
        "color": "#20242D",
        "fontFamily": "Inter-Regular",
        "fontSize": 21,
        "lineHeight": 27,
      },
      Array [
        Object {
          "paddingBottom": 12,
          "zIndex": 1,
        },
        Object {
          "width": 200,
        },
      ],
    ]
  }
>
  descriptionText
</Text>
`;
